{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 1440,
  "lineage": "aaf52556-967b-fe36-bddf-1a2a3820bc72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa952fb880492400",
            "arn": "arn:aws:ec2:us-east-1:975050341094:elastic-ip/eipalloc-0fa952fb880492400",
            "domain": "vpc",
            "id": "eipalloc-0fa952fb880492400",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-233-217-7.compute-1.amazonaws.com",
            "public_ip": "18.233.217.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-A"
            },
            "tags_all": {
              "Name": "EIP-A"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07cb46c93a52782e9",
            "arn": "arn:aws:ec2:us-east-1:975050341094:elastic-ip/eipalloc-07cb46c93a52782e9",
            "domain": "vpc",
            "id": "eipalloc-07cb46c93a52782e9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-83-102-88.compute-1.amazonaws.com",
            "public_ip": "98.83.102.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-B"
            },
            "tags_all": {
              "Name": "EIP-B"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:975050341094:instance/i-02a3ab71fffb67b9c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:975050341094:key/33c36f59-6a2e-4453-a742-0b26c540acef",
                "throughput": 125,
                "volume_id": "vol-095b857305f86058c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_ssm_s3_access_profile",
            "id": "i-02a3ab71fffb67b9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ServerKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e2b36f865deb234",
            "private_dns": "ip-10-0-0-69.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:975050341094:key/33c36f59-6a2e-4453-a742-0b26c540acef",
                "throughput": 125,
                "volume_id": "vol-095b857305f86058c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-09a605cd393940259"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0006ea815cb785d04",
            "tags": {
              "Name": "Server-A"
            },
            "tags_all": {
              "Name": "Server-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09a605cd393940259"
            ]
          },
          "dependencies": [
            "aws_eip.eip-A",
            "aws_iam_instance_profile.ec2_ssm_s3_profile",
            "aws_iam_role.ec2_ssm_s3_access_role",
            "aws_instance.bastion-A",
            "aws_nat_gateway.nat-gw-A",
            "aws_security_group.bastion-sg-A",
            "aws_security_group.vpcA-SG",
            "aws_subnet.public-subnet-A",
            "aws_subnet.subnet-A",
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:975050341094:instance/i-01d96fe8cce71db38",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:975050341094:key/33c36f59-6a2e-4453-a742-0b26c540acef",
                "throughput": 125,
                "volume_id": "vol-0b77e57cf79d7d035",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2_Role_Profile",
            "id": "i-01d96fe8cce71db38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ServerKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0673ddd58f0c39fcc",
            "private_dns": "ip-10-1-0-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:975050341094:key/33c36f59-6a2e-4453-a742-0b26c540acef",
                "throughput": 125,
                "volume_id": "vol-0b77e57cf79d7d035",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0707e36ce49267339"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0556bb3d1b53d4a2f",
            "tags": {
              "Name": "Server-B"
            },
            "tags_all": {
              "Name": "Server-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0707e36ce49267339"
            ]
          },
          "dependencies": [
            "aws_eip.eip-B",
            "aws_iam_instance_profile.ec2_role_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_instance.bastion-B",
            "aws_nat_gateway.nat-gw-B",
            "aws_security_group.bastion-sg-B",
            "aws_security_group.vpcB-SG",
            "aws_subnet.public-subnet-B",
            "aws_subnet.subnet-B",
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:975050341094:instance/i-0d9a31a796cfe241c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:975050341094:key/33c36f59-6a2e-4453-a742-0b26c540acef",
                "throughput": 125,
                "volume_id": "vol-0fcdc2137db00a283",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9a31a796cfe241c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ServerKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ddeae785b7780ad9",
            "private_dns": "ip-10-0-1-79.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.79",
            "public_ip": "54.84.98.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:975050341094:key/33c36f59-6a2e-4453-a742-0b26c540acef",
                "throughput": 125,
                "volume_id": "vol-0fcdc2137db00a283",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-09ed0ab42191666f3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd25b8dd03279d40",
            "tags": {
              "Name": "Bastion-A"
            },
            "tags_all": {
              "Name": "Bastion-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09ed0ab42191666f3"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion-sg-A",
            "aws_subnet.public-subnet-A",
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:975050341094:instance/i-0b2ef6a4f5f820bad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:975050341094:key/33c36f59-6a2e-4453-a742-0b26c540acef",
                "throughput": 125,
                "volume_id": "vol-03b309f7bc958c109",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2ef6a4f5f820bad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ServerKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bd1a892a7353ad5b",
            "private_dns": "ip-10-1-1-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.66",
            "public_ip": "44.204.250.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:975050341094:key/33c36f59-6a2e-4453-a742-0b26c540acef",
                "throughput": 125,
                "volume_id": "vol-03b309f7bc958c109",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-09646a022b4fd6709"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092e8758921103a9a",
            "tags": {
              "Name": "Bastion-B"
            },
            "tags_all": {
              "Name": "Bastion-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09646a022b4fd6709"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion-sg-B",
            "aws_subnet.public-subnet-B",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:internet-gateway/igw-0de0452b570ea587d",
            "id": "igw-0de0452b570ea587d",
            "owner_id": "975050341094",
            "tags": {
              "Name": "IGW-A"
            },
            "tags_all": {
              "Name": "IGW-A"
            },
            "vpc_id": "vpc-035af45dd8f19376b"
          },
          "dependencies": [
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:internet-gateway/igw-0031b59f5dbe5c1b3",
            "id": "igw-0031b59f5dbe5c1b3",
            "owner_id": "975050341094",
            "tags": {
              "Name": "IGW-B"
            },
            "tags_all": {
              "Name": "IGW-B"
            },
            "vpc_id": "vpc-0b08823b4711145ba"
          },
          "dependencies": [
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa952fb880492400",
            "association_id": "eipassoc-04508029139971530",
            "connectivity_type": "public",
            "id": "nat-0da43792c61fd7f8f",
            "network_interface_id": "eni-0b85a643fdef37652",
            "private_ip": "10.0.1.163",
            "public_ip": "18.233.217.7",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fd25b8dd03279d40"
          },
          "dependencies": [
            "aws_eip.eip-A",
            "aws_subnet.public-subnet-A",
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07cb46c93a52782e9",
            "association_id": "eipassoc-0ff9ea6ca3a92a938",
            "connectivity_type": "public",
            "id": "nat-083be84585506b55f",
            "network_interface_id": "eni-06afc167f9e6a77ec",
            "private_ip": "10.1.1.43",
            "public_ip": "98.83.102.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-092e8758921103a9a"
          },
          "dependencies": [
            "aws_eip.eip-B",
            "aws_subnet.public-subnet-B",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de0452b570ea587d",
            "id": "r-rtb-0c6075bfa4c8fb8131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c6075bfa4c8fb813",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-A",
            "aws_route_table.rt-A",
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0031b59f5dbe5c1b3",
            "id": "r-rtb-0dd0fd9c02c4054011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd0fd9c02c405401",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-B",
            "aws_route_table.rt-B",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcA_to_vpcB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0435cd83819cf773a3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0435cd83819cf773a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0627beb66af5193dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcB_to_vpcA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05774738519ee331d179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05774738519ee331d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0627beb66af5193dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:route-table/rtb-0bfec7ba976425344",
            "id": "rtb-0bfec7ba976425344",
            "owner_id": "975050341094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0da43792c61fd7f8f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0627beb66af5193dc"
              }
            ],
            "tags": {
              "Name": "Private-RT-A"
            },
            "tags_all": {
              "Name": "Private-RT-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-035af45dd8f19376b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-A",
            "aws_nat_gateway.nat-gw-A",
            "aws_subnet.public-subnet-A",
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:route-table/rtb-03a7a3fb27147b7e3",
            "id": "rtb-03a7a3fb27147b7e3",
            "owner_id": "975050341094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-083be84585506b55f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0627beb66af5193dc"
              }
            ],
            "tags": {
              "Name": "Private-RT-B"
            },
            "tags_all": {
              "Name": "Private-RT-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b08823b4711145ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-B",
            "aws_nat_gateway.nat-gw-B",
            "aws_subnet.public-subnet-B",
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:route-table/rtb-0c6075bfa4c8fb813",
            "id": "rtb-0c6075bfa4c8fb813",
            "owner_id": "975050341094",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RT-A"
            },
            "tags_all": {
              "Name": "RT-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-035af45dd8f19376b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:route-table/rtb-0dd0fd9c02c405401",
            "id": "rtb-0dd0fd9c02c405401",
            "owner_id": "975050341094",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RT-B"
            },
            "tags_all": {
              "Name": "RT-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b08823b4711145ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach-rt-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3a4ab4ac8e361ec",
            "route_table_id": "rtb-0c6075bfa4c8fb813",
            "subnet_id": "subnet-0fd25b8dd03279d40"
          },
          "dependencies": [
            "aws_route_table.rt-A",
            "aws_subnet.public-subnet-A",
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach-rt-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f5d0532b9cbb2dc",
            "route_table_id": "rtb-0dd0fd9c02c405401",
            "subnet_id": "subnet-092e8758921103a9a"
          },
          "dependencies": [
            "aws_route_table.rt-B",
            "aws_subnet.public-subnet-B",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027d719ee92346282",
            "route_table_id": "rtb-0bfec7ba976425344",
            "subnet_id": "subnet-0006ea815cb785d04"
          },
          "dependencies": [
            "aws_eip.eip-A",
            "aws_nat_gateway.nat-gw-A",
            "aws_route_table.private-rt-A",
            "aws_subnet.public-subnet-A",
            "aws_subnet.subnet-A",
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072250db5a8a1b826",
            "route_table_id": "rtb-03a7a3fb27147b7e3",
            "subnet_id": "subnet-0556bb3d1b53d4a2f"
          },
          "dependencies": [
            "aws_eip.eip-B",
            "aws_nat_gateway.nat-gw-B",
            "aws_route_table.private-rt-B",
            "aws_subnet.public-subnet-B",
            "aws_subnet.subnet-B",
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:security-group/sg-09ed0ab42191666f3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ed0ab42191666f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241005163759942400000009",
            "name_prefix": "terraform-",
            "owner_id": "975050341094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-SG-A"
            },
            "tags_all": {
              "Name": "Bastion-SG-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-035af45dd8f19376b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:security-group/sg-09646a022b4fd6709",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09646a022b4fd6709",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-2024100516375996000000000a",
            "name_prefix": "terraform-",
            "owner_id": "975050341094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-SG-B"
            },
            "tags_all": {
              "Name": "Bastion-SG-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b08823b4711145ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpcA-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:security-group/sg-09a605cd393940259",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a605cd393940259",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.79/32",
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-20241005163959733800000015",
            "name_prefix": "terraform-",
            "owner_id": "975050341094",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035af45dd8f19376b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-A",
            "aws_instance.bastion-A",
            "aws_nat_gateway.nat-gw-A",
            "aws_security_group.bastion-sg-A",
            "aws_subnet.public-subnet-A",
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpcB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:security-group/sg-0707e36ce49267339",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0707e36ce49267339",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.1.1.66/32",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241005163949336200000012",
            "name_prefix": "terraform-",
            "owner_id": "975050341094",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b08823b4711145ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-B",
            "aws_instance.bastion-B",
            "aws_nat_gateway.nat-gw-B",
            "aws_security_group.bastion-sg-B",
            "aws_subnet.public-subnet-B",
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:subnet/subnet-0fd25b8dd03279d40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd25b8dd03279d40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050341094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-A"
            },
            "tags_all": {
              "Name": "Public-Subnet-A"
            },
            "vpc_id": "vpc-035af45dd8f19376b"
          },
          "dependencies": [
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:subnet/subnet-092e8758921103a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092e8758921103a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050341094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-B"
            },
            "tags_all": {
              "Name": "Public-Subnet-B"
            },
            "vpc_id": "vpc-0b08823b4711145ba"
          },
          "dependencies": [
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:subnet/subnet-0006ea815cb785d04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0006ea815cb785d04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050341094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-A"
            },
            "tags_all": {
              "Name": "Subnet-A"
            },
            "vpc_id": "vpc-035af45dd8f19376b"
          },
          "dependencies": [
            "aws_vpc.VPC-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:subnet/subnet-0556bb3d1b53d4a2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0556bb3d1b53d4a2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050341094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-B"
            },
            "tags_all": {
              "Name": "Subnet-B"
            },
            "vpc_id": "vpc-0b08823b4711145ba"
          },
          "dependencies": [
            "aws_vpc.VPC-B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:vpc/vpc-035af45dd8f19376b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04697f42202931fbf",
            "default_route_table_id": "rtb-0435cd83819cf773a",
            "default_security_group_id": "sg-0cf91c0c5b992ad3c",
            "dhcp_options_id": "dopt-0f216e9628479cbbf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035af45dd8f19376b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0435cd83819cf773a",
            "owner_id": "975050341094",
            "tags": {
              "Name": "VPC-A"
            },
            "tags_all": {
              "Name": "VPC-A"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:vpc/vpc-0b08823b4711145ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0532bf7f3adeff8f1",
            "default_route_table_id": "rtb-05774738519ee331d",
            "default_security_group_id": "sg-0a22aabe51ad486cb",
            "dhcp_options_id": "dopt-0f216e9628479cbbf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b08823b4711145ba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05774738519ee331d",
            "owner_id": "975050341094",
            "tags": {
              "Name": "VPC-B"
            },
            "tags_all": {
              "Name": "VPC-B"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3-endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050341094:vpc-endpoint/vpce-0c98cc029d58319c6",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0c98cc029d58319c6",
            "owner_id": "975050341094",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0bfec7ba976425344"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "S3GatewayEndpoint"
            },
            "tags_all": {
              "Name": "S3GatewayEndpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-035af45dd8f19376b"
          },
          "dependencies": [
            "aws_eip.eip-A",
            "aws_nat_gateway.nat-gw-A",
            "aws_route_table.private-rt-A",
            "aws_subnet.public-subnet-A",
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0627beb66af5193dc",
            "peer_owner_id": "975050341094",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0b08823b4711145ba",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-035af45dd8f19376b"
          },
          "dependencies": [
            "aws_vpc.VPC-A",
            "aws_vpc.VPC-B"
          ]
        }
      ]
    }
  ]
}